test/fail/enhanced-migration/enh-mig-test2/m4.mo
module {
    // Introduce a c field.
    public func migration(_ : {}) : { c : Nat } { { c = 99 } };
};
